change project structure, bootstrap-sass added

--- a/src/template/header.html
+++ b/src/template/header.html
@@ -3,9 +3,9 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-2">
-					<img src="img/logo_top.png" alt="логотип nerds" class="logo">				
+					<a href="/#"><img src="img/logo_top.png" alt="логотип nerds" class="logo"></a>
 				</div>
-				<div class="col-md-9 col-md-offset-1 text-right">
+				<div class="col-md-7 col-md-offset-2 text-right">
 					<ul class="header-menu">
 						<li class="header-menu-item"><a href="#">Студия</a></li>
 						<li class="header-menu-item"><a href="#">Клиенты</a></li>
@@ -16,7 +16,7 @@
 				</div>
 			</div>
 		</div>
-	</nav>	
+	</nav>
 
 	<div id="headerSlider" class="carousel slide" data-ride="carousel">
 	  <!-- Indicators -->
@@ -32,7 +32,7 @@
 	    <div class="item active">
 	      <div class="container">
 	      	<div class="row">
-	      		<div class="col-md-7 col-xs-12">
+	      		<div class="col-md-6 col-xs-11">
 	      			<h2>Долго, дорого, <br>
 	      			скурпулезно.</h2>
 					<p>Математически выверенный дизайн <br>
@@ -43,12 +43,12 @@
 	      			<img class="img-responsive pull-right" src="img/slider-1.png" alt="выверенный дизайн">
 	      		</div>
 	      	</div>
-	      </div>      
+	      </div>
 	    </div>
 	    <div class="item">
 	      <div class="container">
 	      	<div class="row">
-	      		<div class="col-md-7 col-xs-12">
+	      		<div class="col-md-6 col-xs-11">
 	      			<h2>Любите ли вы математику,<br>
 	      			как любим ее мы?</h2>
 					<p>Нашим дизайнерам мы удаляем нейроны, ответственные<br>
@@ -56,15 +56,15 @@
 					<a class="btn col-md-6">Узнать больше</a>
 	      		</div>
 	      		<div class="col-md-5 hidden-xs">
-	      			<img class="img-responsive pull-right" src="img/slider-2.png" alt="выверенный дизайн">			
+	      			<img class="img-responsive pull-right" src="img/slider-2.png" alt="выверенный дизайн">
 	      		</div>
 	      	</div>
-	      </div>      
+	      </div>
 	    </div>
 	    <div class="item">
 	      <div class="container">
 	      	<div class="row">
-	      		<div class="col-md-7 col-xs-12">
+	      		<div class="col-md-6 col-xs-12">
 	      			<h2>Только наркотики,<br>
 	      			только хардкор!</h2>
 					<p>Все дизайнерские решения в нашей компании принимаются<br>
@@ -75,7 +75,7 @@
 	      			<img class="img-responsive pull-right" src="img/slider-3.png" alt="выверенный дизайн">
 	      		</div>
 	      	</div>
-	      </div>      
+	      </div>
 	    </div>
 
 	  </div>
