--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -3,8 +3,8 @@
 */
 //@import "../../bower_components/normalize-css/normalize"; //don't need .css 
 //@import "../../bower_components/bootstrap/dist/css/bootstrap.min"; //don't need .css 
-
-
+@import "partials/variables";
+@import "../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap";
 
 /*
 * Custom .scss
@@ -12,3 +12,5 @@
 @import "partials/sprite";
 @import "partials/app";
 @import "partials/header";
+@import "partials/products";
+
