--- a/src/style/partials/header.scss
+++ b/src/style/partials/header.scss
@@ -60,11 +60,9 @@ nav {
 		img {
 			max-height: 300px;
 		}
-		.btn {
-			color: #fff;
-			background-color: $color1;
-			font: 12px/25px $medium;
-		}
+		p {
+			margin: 20px 0 30px;
+		}		
 	}
 
 }
