--- a/src/template/header.html
+++ b/src/template/header.html
@@ -37,7 +37,7 @@
 	      			скурпулезно.</h2>
 					<p>Математически выверенный дизайн <br>
 					для вашего сайта или мобильного приложения.</p>
-					<a class="btn col-md-6">Узнать больше</a>
+					<a class="btn btn-type-1 col-md-6">Узнать больше</a>
 	      		</div>
 	      		<div class="col-md-5 hidden-xs">
 	      			<img class="img-responsive pull-right" src="img/slider-1.png" alt="выверенный дизайн">
@@ -53,7 +53,7 @@
 	      			как любим ее мы?</h2>
 					<p>Нашим дизайнерам мы удаляем нейроны, ответственные<br>
 					за креатив, чтобы дать им возможность все просчитать</p>
-					<a class="btn col-md-6">Узнать больше</a>
+					<a class="btn btn-type-1 col-md-6">Узнать больше</a>
 	      		</div>
 	      		<div class="col-md-5 hidden-xs">
 	      			<img class="img-responsive pull-right" src="img/slider-2.png" alt="выверенный дизайн">
@@ -69,7 +69,7 @@
 	      			только хардкор!</h2>
 					<p>Все дизайнерские решения в нашей компании принимаются<br>
 					только под воздействием качественных галлюциногенов</p>
-					<a class="btn col-md-6">Узнать больше</a>
+					<a class="btn btn-type-1 col-md-6">Узнать больше</a>
 	      		</div>
 	      		<div class="col-md-5 hidden-xs">
 	      			<img class="img-responsive pull-right" src="img/slider-3.png" alt="выверенный дизайн">
