--- a/src/style/partials/products.scss
+++ b/src/style/partials/products.scss
@@ -1,3 +1,14 @@
 .products {
 	padding: 80px 0;
+	p {
+		padding: 0;
+		margin: 0 0 20px;
+	}
+}
+@media (max-width: 768px) {
+	.products {
+		a {
+			margin-bottom: 20px;
+		}
+	}
 }
