--- a/src/template/header.html
+++ b/src/template/header.html
@@ -32,14 +32,14 @@
 	    <div class="item active">
 	      <div class="container">
 	      	<div class="row">
-	      		<div class="col-md-6 col-xs-11">
+	      		<div class="col-xs-6">
 	      			<h2>Долго, дорого, <br>
 	      			скурпулезно.</h2>
 					<p>Математически выверенный дизайн <br>
 					для вашего сайта или мобильного приложения.</p>
 					<a class="btn btn-type-1 col-md-6">Узнать больше</a>
 	      		</div>
-	      		<div class="col-md-5 hidden-xs">
+	      		<div class="col-xs-5">
 	      			<img class="img-responsive pull-right" src="img/slider-1.png" alt="выверенный дизайн">
 	      		</div>
 	      	</div>
@@ -48,14 +48,14 @@
 	    <div class="item">
 	      <div class="container">
 	      	<div class="row">
-	      		<div class="col-md-6 col-xs-11">
+	      		<div class="col-xs-6">
 	      			<h2>Любите ли вы математику,<br>
 	      			как любим ее мы?</h2>
 					<p>Нашим дизайнерам мы удаляем нейроны, ответственные<br>
 					за креатив, чтобы дать им возможность все просчитать</p>
 					<a class="btn btn-type-1 col-md-6">Узнать больше</a>
 	      		</div>
-	      		<div class="col-md-5 hidden-xs">
+	      		<div class="col-xs-5">
 	      			<img class="img-responsive pull-right" src="img/slider-2.png" alt="выверенный дизайн">
 	      		</div>
 	      	</div>
@@ -64,14 +64,14 @@
 	    <div class="item">
 	      <div class="container">
 	      	<div class="row">
-	      		<div class="col-md-6 col-xs-12">
+	      		<div class="col-xs-6">
 	      			<h2>Только наркотики,<br>
 	      			только хардкор!</h2>
 					<p>Все дизайнерские решения в нашей компании принимаются<br>
 					только под воздействием качественных галлюциногенов</p>
 					<a class="btn btn-type-1 col-md-6">Узнать больше</a>
 	      		</div>
-	      		<div class="col-md-5 hidden-xs">
+	      		<div class="col-xs-5">
 	      			<img class="img-responsive pull-right" src="img/slider-3.png" alt="выверенный дизайн">
 	      		</div>
 	      	</div>
