products section finished

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -13,4 +13,6 @@
 @import "partials/app";
 @import "partials/header";
 @import "partials/products";
+@import "partials/about";
+@import "partials/brands";
 
