--- a/src/template/products.html
+++ b/src/template/products.html
@@ -1,23 +1,23 @@
 <section class="products">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-3">
+			<div class="col-xs-11 col-sm-3">
 				<img class="img-responsive" src="img/products-1.jpg" alt="Веб сайты">
 				<h3>Веб-сайты</h3>
 				<p>Мир не будет прежним после того, как увидит ваш сайт!</p>
-				<a class="btn btn-type-1 col-md-7">Заказать</a>
+				<a class="btn btn-type-1">Заказать</a>
 			</div>
-			<div class="col-md-3 col-md-offset-1">
+			<div class="col-xs-11 col-sm-3 col-sm-offset-1">
 				<img class="img-responsive" src="img/products-2.jpg" alt="Приложения">
 				<h3>Приложения</h3>
 				<p>Покорите топ-10 приложений в AppStrore и Google Play</p>
-				<a class="btn btn-type-2 col-md-7">Заказать</a>
+				<a class="btn btn-type-2">Заказать</a>
 			</div>
-			<div class="col-md-3 col-md-offset-1">
+			<div class="col-xs-11 col-sm-3 col-sm-offset-1">
 				<img class="img-responsive" src="img/products-3.jpg" alt="Презентации">
 				<h3>Презентации</h3>
 				<p>Вы даже не подозреваете, насколько вы изумительны!</p>
-				<a class="btn btn-type-3 col-md-7">Заказать</a>
+				<a class="btn btn-type-3">Заказать</a>
 			</div>
 		</div>
 	</div>
