--- a/src/style/partials/products.scss
+++ b/src/style/partials/products.scss
@@ -4,11 +4,18 @@
 		padding: 0;
 		margin: 0 0 20px;
 	}
+	.btn {
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+		max-width: 240px;		
+	}
 }
+
 @media (max-width: 768px) {
 	.products {
-		a {
-			margin-bottom: 20px;
+		.btn:not(.btn-type-3) {
+			margin-bottom: 40px;
 		}
 	}
 }
