--- a/src/template/header.html
+++ b/src/template/header.html
@@ -3,7 +3,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-2">
-					<a href="/#"><img src="img/logo_top.png" alt="логотип nerds" class="logo"></a>
+					<a href="/#"><img src="img/logo-top.png" alt="логотип nerds" class="logo"></a>
 				</div>
 				<div class="col-md-7 col-md-offset-2 text-right">
 					<ul class="header-menu">
@@ -32,15 +32,14 @@
 	    <div class="item active">
 	      <div class="container">
 	      	<div class="row">
-	      		<div class="col-xs-6">
+	      		<div class="col-sm-6">
 	      			<h2>Долго, дорого, <br>
 	      			скурпулезно.</h2>
-					<p>Математически выверенный дизайн <br>
-					для вашего сайта или мобильного приложения.</p>
-					<a class="btn btn-type-1 col-md-6">Узнать больше</a>
+					<p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+					<a class="btn btn-type-1">Узнать больше</a>
 	      		</div>
-	      		<div class="col-xs-5">
-	      			<img class="img-responsive pull-right" src="img/slider-1.png" alt="выверенный дизайн">
+	      		<div class="col-sm-5 hidden-xs">
+	      			<img class="img-responsive" src="img/slider-1.png" alt="выверенный дизайн">
 	      		</div>
 	      	</div>
 	      </div>
@@ -48,15 +47,14 @@
 	    <div class="item">
 	      <div class="container">
 	      	<div class="row">
-	      		<div class="col-xs-6">
+	      		<div class="col-sm-6">
 	      			<h2>Любите ли вы математику,<br>
 	      			как любим ее мы?</h2>
-					<p>Нашим дизайнерам мы удаляем нейроны, ответственные<br>
-					за креатив, чтобы дать им возможность все просчитать</p>
-					<a class="btn btn-type-1 col-md-6">Узнать больше</a>
+					<p>Нашим дизайнерам мы удаляем нейроны, ответственные за креатив, чтобы дать им возможность все просчитать</p>
+					<a class="btn btn-type-1">Узнать больше</a>
 	      		</div>
-	      		<div class="col-xs-5">
-	      			<img class="img-responsive pull-right" src="img/slider-2.png" alt="выверенный дизайн">
+	      		<div class="col-sm-5 hidden-xs">
+	      			<img class="img-responsive" src="img/slider-2.png" alt="выверенный дизайн">
 	      		</div>
 	      	</div>
 	      </div>
@@ -64,15 +62,14 @@
 	    <div class="item">
 	      <div class="container">
 	      	<div class="row">
-	      		<div class="col-xs-6">
+	      		<div class="col-sm-6">
 	      			<h2>Только наркотики,<br>
 	      			только хардкор!</h2>
-					<p>Все дизайнерские решения в нашей компании принимаются<br>
-					только под воздействием качественных галлюциногенов</p>
-					<a class="btn btn-type-1 col-md-6">Узнать больше</a>
+					<p>Все дизайнерские решения в нашей компании принимаются только под воздействием качественных галлюциногенов</p>
+					<a class="btn btn-type-1">Узнать больше</a>
 	      		</div>
-	      		<div class="col-xs-5">
-	      			<img class="img-responsive pull-right" src="img/slider-3.png" alt="выверенный дизайн">
+	      		<div class="col-sm-5 hidden-xs">
+	      			<img class="img-responsive" src="img/slider-3.png" alt="выверенный дизайн">
 	      		</div>
 	      	</div>
 	      </div>
