--- a/src/template/about.html
+++ b/src/template/about.html
@@ -1,4 +1,4 @@
-<div class="about">
+<section class="about">
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-11 col-md-7">
@@ -19,4 +19,4 @@
 			</div>
 		</div>
 	</div>
-</div>
+</section>
