--- a/src/template/shop.html
+++ b/src/template/shop.html
@@ -8,18 +8,18 @@
 					<input type="text" id="range-input" name="rangeName" value="" />
 				</div>
 				<form action="">
-					<label for="rangeFrom">От</label><input type="number" placeholder="0" id="rangeFrom">
-					<label for="rangeTo">До</label><input type="number" placeholder="15000" id="rangeTo">
+					<label class="range-text" for="rangeFrom">От</label><input type="text" class="price-range" placeholder="0" id="rangeFrom">
+					<label class="range-text" for="rangeTo">До</label><input type="text" class="price-range" placeholder="15 000" id="rangeTo">
 				</form>
 			</div>
 			<div class="grid">
 				<h3>Сетка:</h3>
 				<form action="">
-					<input type="radio" id="radio1" name="grid">
+					<input type="radio" id="radio1" name="grid" class="custom-radiobox">
 					<label for="radio1">Адаптивная</label>
-					<input type="radio" id="radio2" name="grid">
+					<input type="radio" id="radio2" name="grid" class="custom-radiobox">
 					<label for="radio2">Фиксированная</label>
-					<input type="radio" id="radio3" name="grid">
+					<input type="radio" id="radio3" name="grid" class="custom-radiobox">
 					<label for="radio3">Резиновая</label>
 				</form>
 			</div>
@@ -27,15 +27,15 @@
 			<div class="properties">
 				<h3>Особенности:</h3>
 				<form action="">
-					<input type="checkbox" id="check1">
+					<input type="checkbox" id="check1" class="custom-checkbox">
 					<label for="check1">Слайдер</label>
-					<input type="checkbox" id="check2">
+					<input type="checkbox" id="check2" class="custom-checkbox">
 					<label for="check2">Блок приемуществ</label>
-					<input type="checkbox" id="check3">
+					<input type="checkbox" id="check3" class="custom-checkbox">
 					<label for="check3">Новости</label>
-					<input type="checkbox" id="check4">
+					<input type="checkbox" id="check4" class="custom-checkbox">
 					<label for="check4">Галерея</label>
-					<input type="checkbox" id="check5">
+					<input type="checkbox" id="check5" class="custom-checkbox">
 					<label for="check5">Корзина</label>
 				</form>
 			</div>		
