main layout finished

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -17,6 +17,8 @@
 @import "partials/about";
 @import "partials/brands";
 @import "partials/shop";
+@import "partials/map";
+@import "partials/footer";
 
 
 
