--- a/src/style/partials/_sprite.scss
+++ b/src/style/partials/_sprite.scss
@@ -9,77 +9,99 @@
 //
 // At the bottom of this section, we provide information about the spritesheet itself
 // $spritesheet: width height image $spritesheet-sprites;
+$browser-panel-name: 'browser-panel';
+$browser-panel-x: 0px;
+$browser-panel-y: 0px;
+$browser-panel-offset-x: 0px;
+$browser-panel-offset-y: 0px;
+$browser-panel-width: 240px;
+$browser-panel-height: 30px;
+$browser-panel-total-width: 240px;
+$browser-panel-total-height: 77px;
+$browser-panel-image: '../img/sprite.png';
+$browser-panel: (0px, 0px, 0px, 0px, 240px, 30px, 240px, 77px, '../img/sprite.png', 'browser-panel', );
 $checkbox-checked-name: 'checkbox_checked';
 $checkbox-checked-x: 0px;
-$checkbox-checked-y: 0px;
+$checkbox-checked-y: 32px;
 $checkbox-checked-offset-x: 0px;
-$checkbox-checked-offset-y: 0px;
+$checkbox-checked-offset-y: -32px;
 $checkbox-checked-width: 20px;
 $checkbox-checked-height: 20px;
-$checkbox-checked-total-width: 56px;
-$checkbox-checked-total-height: 37px;
+$checkbox-checked-total-width: 240px;
+$checkbox-checked-total-height: 77px;
 $checkbox-checked-image: '../img/sprite.png';
-$checkbox-checked: (0px, 0px, 0px, 0px, 20px, 20px, 56px, 37px, '../img/sprite.png', 'checkbox_checked', );
+$checkbox-checked: (0px, 32px, 0px, -32px, 20px, 20px, 240px, 77px, '../img/sprite.png', 'checkbox_checked', );
 $checkbox-unchecked-name: 'checkbox_unchecked';
 $checkbox-unchecked-x: 22px;
-$checkbox-unchecked-y: 0px;
+$checkbox-unchecked-y: 32px;
 $checkbox-unchecked-offset-x: -22px;
-$checkbox-unchecked-offset-y: 0px;
+$checkbox-unchecked-offset-y: -32px;
 $checkbox-unchecked-width: 20px;
 $checkbox-unchecked-height: 20px;
-$checkbox-unchecked-total-width: 56px;
-$checkbox-unchecked-total-height: 37px;
+$checkbox-unchecked-total-width: 240px;
+$checkbox-unchecked-total-height: 77px;
 $checkbox-unchecked-image: '../img/sprite.png';
-$checkbox-unchecked: (22px, 0px, -22px, 0px, 20px, 20px, 56px, 37px, '../img/sprite.png', 'checkbox_unchecked', );
+$checkbox-unchecked: (22px, 32px, -22px, -32px, 20px, 20px, 240px, 77px, '../img/sprite.png', 'checkbox_unchecked', );
 $icon-basket-name: 'icon-basket';
-$icon-basket-x: 17px;
-$icon-basket-y: 22px;
-$icon-basket-offset-x: -17px;
-$icon-basket-offset-y: -22px;
+$icon-basket-x: 81px;
+$icon-basket-y: 32px;
+$icon-basket-offset-x: -81px;
+$icon-basket-offset-y: -32px;
 $icon-basket-width: 16px;
 $icon-basket-height: 13px;
-$icon-basket-total-width: 56px;
-$icon-basket-total-height: 37px;
+$icon-basket-total-width: 240px;
+$icon-basket-total-height: 77px;
 $icon-basket-image: '../img/sprite.png';
-$icon-basket: (17px, 22px, -17px, -22px, 16px, 13px, 56px, 37px, '../img/sprite.png', 'icon-basket', );
+$icon-basket: (81px, 32px, -81px, -32px, 16px, 13px, 240px, 77px, '../img/sprite.png', 'icon-basket', );
 $icon-fb-name: 'icon-fb';
-$icon-fb-x: 44px;
-$icon-fb-y: 15px;
-$icon-fb-offset-x: -44px;
-$icon-fb-offset-y: -15px;
-$icon-fb-width: 9px;
-$icon-fb-height: 17px;
-$icon-fb-total-width: 56px;
-$icon-fb-total-height: 37px;
+$icon-fb-x: 0px;
+$icon-fb-y: 54px;
+$icon-fb-offset-x: 0px;
+$icon-fb-offset-y: -54px;
+$icon-fb-width: 11px;
+$icon-fb-height: 23px;
+$icon-fb-total-width: 240px;
+$icon-fb-total-height: 77px;
 $icon-fb-image: '../img/sprite.png';
-$icon-fb: (44px, 15px, -44px, -15px, 9px, 17px, 56px, 37px, '../img/sprite.png', 'icon-fb', );
+$icon-fb: (0px, 54px, 0px, -54px, 11px, 23px, 240px, 77px, '../img/sprite.png', 'icon-fb', );
 $icon-insta-name: 'icon-insta';
-$icon-insta-x: 0px;
-$icon-insta-y: 22px;
-$icon-insta-offset-x: 0px;
-$icon-insta-offset-y: -22px;
-$icon-insta-width: 15px;
-$icon-insta-height: 15px;
-$icon-insta-total-width: 56px;
-$icon-insta-total-height: 37px;
+$icon-insta-x: 44px;
+$icon-insta-y: 32px;
+$icon-insta-offset-x: -44px;
+$icon-insta-offset-y: -32px;
+$icon-insta-width: 19px;
+$icon-insta-height: 18px;
+$icon-insta-total-width: 240px;
+$icon-insta-total-height: 77px;
 $icon-insta-image: '../img/sprite.png';
-$icon-insta: (0px, 22px, 0px, -22px, 15px, 15px, 56px, 37px, '../img/sprite.png', 'icon-insta', );
+$icon-insta: (44px, 32px, -44px, -32px, 19px, 18px, 240px, 77px, '../img/sprite.png', 'icon-insta', );
 $icon-vk-name: 'icon-vk';
-$icon-vk-x: 44px;
-$icon-vk-y: 0px;
-$icon-vk-offset-x: -44px;
-$icon-vk-offset-y: 0px;
-$icon-vk-width: 12px;
-$icon-vk-height: 13px;
-$icon-vk-total-width: 56px;
-$icon-vk-total-height: 37px;
+$icon-vk-x: 65px;
+$icon-vk-y: 32px;
+$icon-vk-offset-x: -65px;
+$icon-vk-offset-y: -32px;
+$icon-vk-width: 14px;
+$icon-vk-height: 16px;
+$icon-vk-total-width: 240px;
+$icon-vk-total-height: 77px;
 $icon-vk-image: '../img/sprite.png';
-$icon-vk: (44px, 0px, -44px, 0px, 12px, 13px, 56px, 37px, '../img/sprite.png', 'icon-vk', );
-$spritesheet-width: 56px;
-$spritesheet-height: 37px;
+$icon-vk: (65px, 32px, -65px, -32px, 14px, 16px, 240px, 77px, '../img/sprite.png', 'icon-vk', );
+$sort-down-name: 'sort_down';
+$sort-down-x: 99px;
+$sort-down-y: 32px;
+$sort-down-offset-x: -99px;
+$sort-down-offset-y: -32px;
+$sort-down-width: 9px;
+$sort-down-height: 9px;
+$sort-down-total-width: 240px;
+$sort-down-total-height: 77px;
+$sort-down-image: '../img/sprite.png';
+$sort-down: (99px, 32px, -99px, -32px, 9px, 9px, 240px, 77px, '../img/sprite.png', 'sort_down', );
+$spritesheet-width: 240px;
+$spritesheet-height: 77px;
 $spritesheet-image: '../img/sprite.png';
-$spritesheet-sprites: ($checkbox-checked, $checkbox-unchecked, $icon-basket, $icon-fb, $icon-insta, $icon-vk, );
-$spritesheet: (56px, 37px, '../img/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($browser-panel, $checkbox-checked, $checkbox-unchecked, $icon-basket, $icon-fb, $icon-insta, $icon-vk, $sort-down, );
+$spritesheet: (240px, 77px, '../img/sprite.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
