--- a/src/template/brands.html
+++ b/src/template/brands.html
@@ -1,5 +1,7 @@
 <section class="brands">
-	<a target="_blank" href="#"><img src="img/brand-1.png" alt="glukhanko" class="brand-item"></a>
-	<a target="_blank" href="https://htmlacademy.ru/profile/id239900"><img src="img/brand-2.png" alt="html academy" class="brand-item"></a>
-	<a target="_blank" href="https://burn1ng.github.io/borodinsky/index.html"><img src="img/brand-3.png" alt="borodinsky" class="brand-item"></a>
+	<div class="container">
+		<a target="_blank" href="#"><img src="img/brand-1.png" alt="glukhanko" class="brands-item"></a>
+		<a target="_blank" href="https://htmlacademy.ru/profile/id239900"><img src="img/brand-2.png" alt="html academy" class="brands-item"></a>
+		<a target="_blank" href="https://burn1ng.github.io/borodinsky/index.html"><img src="img/brand-3.png" alt="borodinsky" class="brands-item"></a>
+	</div>
 </section>
