--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -1,4 +1,14 @@
-<section class="footer">
-This text is imported from template/footer.html
-222222222
-</section>
+<footer>
+	<div class="container">
+		<div class="social-buttons">
+			<a target="_blank" href="https://vk.com/burning" class="icon icon-vk"></a>
+			<a href="https://www.facebook.com/profile.php?id=100004784856939" class="icon icon-fb"></a>
+			<a href="#" class="icon icon-insta"></a>
+		</div>	
+		<div class="social-title">
+			<h2>Давайте дружить, это выгодно!</h2>
+			<div class="description">Скидка 10% для друзей из социальных сетей.</div>
+		</div>
+	</div>
+	
+</footer>
