--- a/src/template/shop.html
+++ b/src/template/shop.html
@@ -50,30 +50,72 @@
 			</div>
 			<div class="shop-content">
 				<div class="item">
-					<div class="browser-panel"><img src="img/shop-item-1.jpg" alt="Aviator" class="shop-img img-responsive"></div>
+					<div class="browser-panel">
+						<img src="img/shop-item-1.jpg" alt="Aviator" class="shop-img img-responsive">
+						<div class="item-description">
+							<h3>Aviator</h3>
+							<span>Интернет-магазин с личным кабинетом</span>
+							<a href="#" class="btn btn-type-1">10 000 р.</a>
+						</div>
+					</div>
 				</div>
 				<div class="item">
-					<div class="browser-panel"><img src="img/shop-item-2.jpg" alt="Sunset" class="shop-img img-responsive"></div>
+					<div class="browser-panel">
+						<img src="img/shop-item-2.jpg" alt="Sunset" class="shop-img img-responsive">
+						<div class="item-description">
+							<h3>Sunset</h3>
+							<span>Интернет-магазин с личным кабинетом</span>
+							<a href="#" class="btn btn-type-1">10 000 р.</a>
+						</div>
+					</div>
 				</div>
 				<div class="item">
-					<div class="browser-panel"><img src="img/shop-item-3.jpg" alt="Forte" class="shop-img img-responsive"></div>
+					<div class="browser-panel">
+						<img src="img/shop-item-3.jpg" alt="Forte" class="shop-img img-responsive">
+						<div class="item-description">
+							<h3>Forte</h3>
+							<span>Интернет-магазин с личным кабинетом</span>
+							<a href="#" class="btn btn-type-1">10 000 р.</a>
+						</div>
+					</div>
 				</div>
 				<div class="item">
-					<div class="browser-panel"><img src="img/shop-item-4.jpg" alt="Marquee" class="shop-img img-responsive"></div>
+					<div class="browser-panel">
+						<img src="img/shop-item-4.jpg" alt="Marquee" class="shop-img img-responsive">
+						<div class="item-description">
+							<h3>Marquee</h3>
+							<span>Интернет-магазин с личным кабинетом</span>
+							<a href="#" class="btn btn-type-1">10 000 р.</a>
+						</div>
+					</div>
 				</div>
 				<div class="item">
-					<div class="browser-panel"><img src="img/shop-item-5.jpg" alt="Avenue" class="shop-img img-responsive"></div>
+					<div class="browser-panel">
+						<img src="img/shop-item-5.jpg" alt="Avenue" class="shop-img img-responsive">
+						<div class="item-description">
+							<h3>Avenue</h3>
+							<span>Интернет-магазин с личным кабинетом</span>
+							<a href="#" class="btn btn-type-1">10 000 р.</a>
+						</div>
+					</div>
 				</div>
 				<div class="item">
-					<div class="browser-panel"><img src="img/shop-item-6.jpg" alt="Dovetail" class="shop-img img-responsive"></div>
+					<div class="browser-panel">
+						<img src="img/shop-item-6.jpg" alt="Dovetail" class="shop-img img-responsive">
+						<div class="item-description">
+							<h3>Dovetail</h3>
+							<span>Интернет-магазин с личным кабинетом</span>
+							<a href="#" class="btn btn-type-1">10 000 р.</a>
+						</div>
+					</div>
 				</div>
 			</div>
 			<div class="shop-pagination">
-				<a href="" class="shop-pagination-box btn-prev">Предыдущая</a>
-				<a href="" class="shop-pagination-box">1</a>
-				<a href="" class="shop-pagination-box">2</a>
-				<a href="" class="shop-pagination-box">3</a>
-				<a href="" class="shop-pagination-box btn-next">Следующая</a>
+				<a href="#" class="shop-pagination-box btn-prev">Предыдущая</a>
+				<a href="#" class="shop-pagination-box">1</a>
+				<a href="#" class="shop-pagination-box">2</a>
+				<a href="#" class="shop-pagination-box">3</a>
+				<a href="#" class="shop-pagination-box btn-next">Следующая</a>
 			</div>
 		</main>
 		
