--- a/src/style/partials/brands.scss
+++ b/src/style/partials/brands.scss
@@ -1,10 +1,14 @@
 .brands {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	max-width: 900px;
-	margin: 0 auto;	
-	.brand-item {
+	.container {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		flex-wrap: wrap;
+		a {
+			flex: 1;
+		}
+	}	
+	&-item {
 		padding: 40px 0;
 		opacity: 0.2;
 		transition: opacity .2s;
@@ -15,8 +19,8 @@
 
 }
 
-@media (max-width: 768px) {
-	.brands {
-		flex-direction: column;
-	}
-}
+// @media (max-width: 768px) {
+// 	.brands .container {
+// 		flex-direction: column;
+// 	}
+// }
