--- a/src/template/map.html
+++ b/src/template/map.html
@@ -1,5 +1,4 @@
 <section class="map">
-	
 	<div class="container">
 		<div class="map-box">
 			<span class="logo"><span>NЁRDS</span> Design Studio</span>
@@ -9,5 +8,6 @@
 			<a href="#" class="btn btn-type-1">Напишите нам</a>
 		</div>
 	</div>
-	<div id="map"></div>
+	<div id="map" class="hidden-xs"></div>
+	<div id="map-mobile" class="visible-xs-block"></div>
 </section>
