--- a/src/template/header.html
+++ b/src/template/header.html
@@ -1,5 +1,5 @@
 <header>
-	<nav>
+	<nav class="navigation-bar">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-2">
@@ -7,11 +7,11 @@
 				</div>
 				<div class="col-md-7 col-md-offset-2 text-right">
 					<ul class="header-menu">
-						<li class="header-menu-item"><a href="#">Студия</a></li>
-						<li class="header-menu-item"><a href="#">Клиенты</a></li>
-						<li class="header-menu-item"><a href="#">Магазин</a></li>
-						<li class="header-menu-item"><a href="#">Контакты</a></li>
-						<li class="header-menu-item"><a class="icon-basket" href="#">Корзина</a></li>
+						<li class="header-menu-item"><a href="#"><span>Студия</a></span></li>
+						<li class="header-menu-item"><a href="#"><span>Клиенты</a></span></li>
+						<li class="header-menu-item"><a href="#"><span>Магазин</a></span></li>
+						<li class="header-menu-item"><a href="#"><span>Контакты</a></span></li>
+						<li class="header-menu-item"><a class="icon-basket" href="#"><span>Корзина</a></span></li>
 					</ul>
 				</div>
 			</div>
